--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# Whatsapp Conversations #
+WhatsApp Chat with IT-istii antreprenori.txt
